--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -24,6 +24,9 @@
 # PRLabel: %Storage
 /sdk/storage/            @rickwinter @jhendrixMSFT
 
+# PRLabel: %Cosmos
+/sdk/cosmos/            @ealsur @ausfeldt 
+
 # PRLabel: %EngSys
 /sdk/template/           @benbp @Azure/azure-sdk-eng
 
