--- a/eng/pipelines/templates/jobs/archetype-sdk-client.yml
+++ b/eng/pipelines/templates/jobs/archetype-sdk-client.yml
@@ -1,5 +1,6 @@
 parameters:
   ServiceDirectory: ''
+  RunTests: false
 
 stages:
   - stage: Build
@@ -53,6 +54,7 @@ stages:
           Scope: $(SCOPE)
           Image: $(vm.image)
           GoVersion: $(go.version)
+          RunTests: ${{ parameters.RunTests }}
 
     - job: Analyze
       displayName: Analyze
