--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -41,7 +41,7 @@ steps:
       Write-Host "##[command]Check source file formatting in $(pwd)"
       $files = Get-ChildItem -Path . -Filter *.go
       if ($files.Count -gt 0) {
-        gofmt -s -l -d $files
+        gofmt -s -l -d
       }
     displayName: 'Format Check'
     condition: succeededOrFailed()
