--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -39,10 +39,7 @@ steps:
 
   - pwsh: |
       Write-Host "##[command]Check source file formatting in $(pwd)"
-      $files = Get-ChildItem -Path . -Filter *.go
-      if ($files.Count -gt 0) {
-        gofmt -s -l -d $files
-      }
+      gofmt -s -l -d .
     displayName: 'Format Check'
     condition: succeededOrFailed()
     failOnStderr: true
