--- a/sdk/tables/aztable/recordings/TestTableClient_Storage/TestBatchError.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Storage/TestBatchError.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"TableName":"gotableonrrfq12v28e4"}'
+    body: '{"TableName":"gotablerfy2ek8lw8uew"}'
     form: {}
     headers:
       Accept:
@@ -19,28 +19,28 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Thu, 15 Jul 2021 21:50:13 GMT
+      - Thu, 22 Jul 2021 21:22:59 GMT
       X-Ms-Version:
       - "2019-02-02"
     url: https://seankaneprim.table.core.windows.net/Tables
     method: POST
   response:
-    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotableonrrfq12v28e4"}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotablerfy2ek8lw8uew"}'
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Thu, 15 Jul 2021 21:50:12 GMT
+      - Thu, 22 Jul 2021 21:23:00 GMT
       Location:
-      - https://seankaneprim.table.core.windows.net/Tables('gotableonrrfq12v28e4')
+      - https://seankaneprim.table.core.windows.net/Tables('gotablerfy2ek8lw8uew')
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 919d9e74-3002-004e-6fc3-79c6fd000000
+      - b2dee72e-f002-008a-603f-7fb3c4000000
       X-Ms-Version:
       - "2019-02-02"
     status: 201 Created
@@ -66,10 +66,10 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Thu, 15 Jul 2021 21:50:14 GMT
+      - Thu, 22 Jul 2021 21:23:00 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotableonrrfq12v28e4
+    url: https://seankaneprim.table.core.windows.net/gotablerfy2ek8lw8uew
     method: POST
   response:
     body: ""
@@ -79,13 +79,13 @@ interactions:
       Content-Length:
       - "0"
       Dataserviceid:
-      - https://seankaneprim.table.core.windows.net/gotableonrrfq12v28e4(PartitionKey='partition',RowKey='3')
+      - https://seankaneprim.table.core.windows.net/gotablerfy2ek8lw8uew(PartitionKey='partition',RowKey='3')
       Date:
-      - Thu, 15 Jul 2021 21:50:12 GMT
+      - Thu, 22 Jul 2021 21:23:00 GMT
       Etag:
-      - W/"datetime'2021-07-15T21%3A50%3A13.1513731Z'"
+      - W/"datetime'2021-07-22T21%3A23%3A00.9506221Z'"
       Location:
-      - https://seankaneprim.table.core.windows.net/gotableonrrfq12v28e4(PartitionKey='partition',RowKey='3')
+      - https://seankaneprim.table.core.windows.net/gotablerfy2ek8lw8uew(PartitionKey='partition',RowKey='3')
       Preference-Applied:
       - return-no-content
       Server:
@@ -93,27 +93,27 @@ interactions:
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 919d9f04-3002-004e-74c3-79c6fd000000
+      - b2dee753-f002-008a-013f-7fb3c4000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
     code: 204
     duration: ""
 - request:
-    body: "--batch_ebe3c2c9-e659-4741-4aa9-3cde003d089a\r\nContent-Type: multipart/mixed;
-      boundary=changeset_ac013381-52b5-4ade-74f1-c359107c6b47\r\n\r\n--changeset_ac013381-52b5-4ade-74f1-c359107c6b47\r\nContent-Transfer-Encoding:
-      binary\r\nContent-Type: application/http\r\n\r\nPOST https://seankaneprim.table.core.windows.net/gotableonrrfq12v28e4?%24format=application%2Fjson%3Bodata%3Dminimalmetadata
+    body: "--batch_03a5c976-870c-49ec-47de-f8324b3c9011\r\nContent-Type: multipart/mixed;
+      boundary=changeset_eef20793-2df9-4971-6bd0-39b9d205d863\r\n\r\n--changeset_eef20793-2df9-4971-6bd0-39b9d205d863\r\nContent-Transfer-Encoding:
+      binary\r\nContent-Type: application/http\r\n\r\nPOST https://seankaneprim.table.core.windows.net/gotablerfy2ek8lw8uew?%24format=application%2Fjson%3Bodata%3Dminimalmetadata
       HTTP/1.1\r\nAccept: application/json;odata=minimalmetadata\r\nContent-Length:
-      260\r\nContent-Type: application/json\r\nDataserviceversion: 3.0\r\nPrefer:
-      return-no-content\r\nX-Ms-Version: 2019-02-02\r\n\r\n{\"Bool\":true,\"Byte\":\"c29tZWJ5dGVz\",\"DateTime\":\"2021-07-13T00:00:00Z\",\"Float\":3.14159,\"Float@odata.type\":\"Edm.Double\",\"Integer\":1,\"Integer@odata.type\":\"Edm.Double\",\"PartitionKey\":\"partition\",\"RowKey\":\"1\",\"String\":\"someString\",\"Timestamp\":\"0001-01-01T00:00:00Z\"}\r\n--changeset_ac013381-52b5-4ade-74f1-c359107c6b47\r\nContent-Transfer-Encoding:
-      binary\r\nContent-Type: application/http\r\n\r\nPOST https://seankaneprim.table.core.windows.net/gotableonrrfq12v28e4?%24format=application%2Fjson%3Bodata%3Dminimalmetadata
+      194\r\nContent-Type: application/json\r\nDataserviceversion: 3.0\r\nPrefer:
+      return-no-content\r\nX-Ms-Version: 2019-02-02\r\n\r\n{\"Bool\":true,\"Byte\":\"c29tZWJ5dGVz\",\"DateTime\":\"2021-07-13T00:00:00Z\",\"Float\":3.14159,\"Integer\":1,\"PartitionKey\":\"partition\",\"RowKey\":\"1\",\"String\":\"someString\",\"Timestamp\":\"0001-01-01T00:00:00Z\"}\r\n--changeset_eef20793-2df9-4971-6bd0-39b9d205d863\r\nContent-Transfer-Encoding:
+      binary\r\nContent-Type: application/http\r\n\r\nPOST https://seankaneprim.table.core.windows.net/gotablerfy2ek8lw8uew?%24format=application%2Fjson%3Bodata%3Dminimalmetadata
       HTTP/1.1\r\nAccept: application/json;odata=minimalmetadata\r\nContent-Length:
-      260\r\nContent-Type: application/json\r\nDataserviceversion: 3.0\r\nPrefer:
-      return-no-content\r\nX-Ms-Version: 2019-02-02\r\n\r\n{\"Bool\":true,\"Byte\":\"c29tZWJ5dGVz\",\"DateTime\":\"2021-07-13T00:00:00Z\",\"Float\":3.14159,\"Float@odata.type\":\"Edm.Double\",\"Integer\":2,\"Integer@odata.type\":\"Edm.Double\",\"PartitionKey\":\"partition\",\"RowKey\":\"2\",\"String\":\"someString\",\"Timestamp\":\"0001-01-01T00:00:00Z\"}\r\n--changeset_ac013381-52b5-4ade-74f1-c359107c6b47\r\nContent-Transfer-Encoding:
-      binary\r\nContent-Type: application/http\r\n\r\nPOST https://seankaneprim.table.core.windows.net/gotableonrrfq12v28e4?%24format=application%2Fjson%3Bodata%3Dminimalmetadata
+      194\r\nContent-Type: application/json\r\nDataserviceversion: 3.0\r\nPrefer:
+      return-no-content\r\nX-Ms-Version: 2019-02-02\r\n\r\n{\"Bool\":true,\"Byte\":\"c29tZWJ5dGVz\",\"DateTime\":\"2021-07-13T00:00:00Z\",\"Float\":3.14159,\"Integer\":2,\"PartitionKey\":\"partition\",\"RowKey\":\"2\",\"String\":\"someString\",\"Timestamp\":\"0001-01-01T00:00:00Z\"}\r\n--changeset_eef20793-2df9-4971-6bd0-39b9d205d863\r\nContent-Transfer-Encoding:
+      binary\r\nContent-Type: application/http\r\n\r\nPOST https://seankaneprim.table.core.windows.net/gotablerfy2ek8lw8uew?%24format=application%2Fjson%3Bodata%3Dminimalmetadata
       HTTP/1.1\r\nAccept: application/json;odata=minimalmetadata\r\nContent-Length:
-      260\r\nContent-Type: application/json\r\nDataserviceversion: 3.0\r\nPrefer:
-      return-no-content\r\nX-Ms-Version: 2019-02-02\r\n\r\n{\"Bool\":true,\"Byte\":\"c29tZWJ5dGVz\",\"DateTime\":\"2021-07-13T00:00:00Z\",\"Float\":3.14159,\"Float@odata.type\":\"Edm.Double\",\"Integer\":3,\"Integer@odata.type\":\"Edm.Double\",\"PartitionKey\":\"partition\",\"RowKey\":\"3\",\"String\":\"someString\",\"Timestamp\":\"0001-01-01T00:00:00Z\"}\r\n--changeset_ac013381-52b5-4ade-74f1-c359107c6b47--\r\n\r\n--batch_ebe3c2c9-e659-4741-4aa9-3cde003d089a--\r\n"
+      194\r\nContent-Type: application/json\r\nDataserviceversion: 3.0\r\nPrefer:
+      return-no-content\r\nX-Ms-Version: 2019-02-02\r\n\r\n{\"Bool\":true,\"Byte\":\"c29tZWJ5dGVz\",\"DateTime\":\"2021-07-13T00:00:00Z\",\"Float\":3.14159,\"Integer\":3,\"PartitionKey\":\"partition\",\"RowKey\":\"3\",\"String\":\"someString\",\"Timestamp\":\"0001-01-01T00:00:00Z\"}\r\n--changeset_eef20793-2df9-4971-6bd0-39b9d205d863--\r\n\r\n--batch_03a5c976-870c-49ec-47de-f8324b3c9011--\r\n"
     form: {}
     headers:
       Accept:
@@ -121,39 +121,39 @@ interactions:
       Authorization:
       - sanitized
       Content-Length:
-      - "2329"
+      - "2131"
       Content-Type:
-      - multipart/mixed; boundary=batch_ebe3c2c9-e659-4741-4aa9-3cde003d089a
+      - multipart/mixed; boundary=batch_03a5c976-870c-49ec-47de-f8324b3c9011
       Dataserviceversion:
       - "3.0"
       User-Agent:
       - azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5; Windows_NT)
       X-Ms-Date:
-      - Thu, 15 Jul 2021 21:50:14 GMT
+      - Thu, 22 Jul 2021 21:23:00 GMT
       X-Ms-Version:
       - "2019-02-02"
     url: https://seankaneprim.table.core.windows.net/$batch
     method: POST
   response:
-    body: "--batchresponse_61fdc5a5-761a-4a06-b2e2-46a04023783d\r\nContent-Type: multipart/mixed;
-      boundary=changesetresponse_a4bb513b-0239-47b0-aa39-43d5e59c46cf\r\n\r\n--changesetresponse_a4bb513b-0239-47b0-aa39-43d5e59c46cf\r\nContent-Type:
+    body: "--batchresponse_45a7bf89-c202-4c53-b017-142a16af4436\r\nContent-Type: multipart/mixed;
+      boundary=changesetresponse_f0dc36ef-87e6-43db-a60f-f0e871f934f7\r\n\r\n--changesetresponse_f0dc36ef-87e6-43db-a60f-f0e871f934f7\r\nContent-Type:
       application/http\r\nContent-Transfer-Encoding: binary\r\n\r\nHTTP/1.1 409 Conflict\r\nX-Content-Type-Options:
       nosniff\r\nCache-Control: no-cache\r\nPreference-Applied: return-no-content\r\nDataServiceVersion:
       3.0;\r\nContent-Type: application/json;odata=minimalmetadata;streaming=true;charset=utf-8\r\n\r\n{\"odata.error\":{\"code\":\"EntityAlreadyExists\",\"message\":{\"lang\":\"en-US\",\"value\":\"2:The
-      specified entity already exists.\\nRequestId:919d9f4d-3002-004e-3dc3-79c6fd000000\\nTime:2021-07-15T21:50:13.2804650Z\"}}}\r\n--changesetresponse_a4bb513b-0239-47b0-aa39-43d5e59c46cf--\r\n--batchresponse_61fdc5a5-761a-4a06-b2e2-46a04023783d--\r\n"
+      specified entity already exists.\\nRequestId:b2dee77f-f002-008a-2c3f-7fb3c4000000\\nTime:2021-07-22T21:23:01.0647021Z\"}}}\r\n--changesetresponse_f0dc36ef-87e6-43db-a60f-f0e871f934f7--\r\n--batchresponse_45a7bf89-c202-4c53-b017-142a16af4436--\r\n"
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
-      - multipart/mixed; boundary=batchresponse_61fdc5a5-761a-4a06-b2e2-46a04023783d
+      - multipart/mixed; boundary=batchresponse_45a7bf89-c202-4c53-b017-142a16af4436
       Date:
-      - Thu, 15 Jul 2021 21:50:12 GMT
+      - Thu, 22 Jul 2021 21:23:00 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 919d9f4d-3002-004e-3dc3-79c6fd000000
+      - b2dee77f-f002-008a-2c3f-7fb3c4000000
       X-Ms-Version:
       - "2019-02-02"
     status: 202 Accepted
@@ -171,10 +171,10 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Thu, 15 Jul 2021 21:50:14 GMT
+      - Thu, 22 Jul 2021 21:23:00 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/Tables('gotableonrrfq12v28e4')
+    url: https://seankaneprim.table.core.windows.net/Tables('gotablerfy2ek8lw8uew')
     method: DELETE
   response:
     body: ""
@@ -184,13 +184,13 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Thu, 15 Jul 2021 21:50:12 GMT
+      - Thu, 22 Jul 2021 21:23:00 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 919d9fa1-3002-004e-10c3-79c6fd000000
+      - b2dee7b8-f002-008a-5e3f-7fb3c4000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
