--- a/sdk/servicebus/armservicebus/ci.yml
+++ b/sdk/servicebus/armservicebus/ci.yml
@@ -10,6 +10,6 @@ pr:
     - sdk/servicebus/armservicebus/
 
 stages:
-- template: ../../../eng/pipelines/templates/jobs/archetype-sdk-client.yml
+- template: /eng/pipelines/templates/jobs/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: 'servicebus/armservicebus'
