--- a/eng/pipelines/templates/steps/build-test.yml
+++ b/eng/pipelines/templates/steps/build-test.yml
@@ -40,6 +40,8 @@ steps:
           if (Select-String -path ./report.xml -pattern '<testsuites></testsuites>' -simplematch -quiet) {
             Write-Host "##[command]Deleting empty coverage file"
             rm coverage.txt
+          } else {
+            mv coverage.txt $td
           }
         }
       displayName: 'Run Tests'
